--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -1,16 +1,22 @@
-
-
-html, body{
-  font-family:'Pretendard';
+html,
+body {
+  font-family: "Pretendard";
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color:#494949;
+  color: #494949;
   word-break: keep-all;
-  width:100%;
-  scroll-behavior: smooth;
-}
+  width: 100%;
+  /*
+    SPA으로 동작시 실제 Route는 다른주소의 요청을 받아 랜더링 하는것이 아닌
+    로드된 페이지의 정보를 갱신하는 방식으로 진행되어 페이지 스크롤 위치가 변경되지 않게됨
+    기존의 컨텐츠가 사라지고 새로생기는 과정에서 기존 스크롤의 높이값과 컨텐츠 높이의 이상이 생기되면
+    페이지는 TOP으로 초기화됨
 
+    이과정에서 스크롤이 이동되었다고 판단되어 브라우저는 아래 css규칙을 따르는듯 함.
+  */
+
+}
 
 /*  16px 기준
 70px - 4.38rem
@@ -28,76 +34,80 @@ html, body{
 
 */
 
-.inner{
-  max-width:1440px;
-  width:100%;
-  margin:0 auto;
+.inner {
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
 }
 
-
-
-@media screen and (max-width:1440px) {
-  .inner{
-    padding:0 20px;
+@media screen and (max-width: 1440px) {
+  .inner {
+    padding: 0 20px;
   }
 }
 
-a{
+a {
   color: inherit;
   text-decoration: none;
 }
 
-p{
-  margin:0;
+p {
+  margin: 0;
 }
 
-strong{font-weight:normal}
-
-img{
-  display:block;
-  image-rendering:-webkit-optimize-contrast;
-  transform:translateZ(0);
-  backface-visibility:hidden;
+strong {
+  font-weight: normal;
 }
 
-.animation{
+img {
+  display: block;
+  image-rendering: -webkit-optimize-contrast;
+  transform: translateZ(0);
+  backface-visibility: hidden;
+}
+
+.animation {
   opacity: 0;
 }
-.animation.on.slideup{
+.animation.on.slideup {
   opacity: 0;
   transform: translateY(100px);
-  animation: slideup .6s forwards;
+  animation: slideup 0.6s forwards;
+}
 
-  @keyframes slideup {
-    0%{
-      opacity: 0;
-      transform:translateY(100px)
-    }
-    100%{
-      opacity: 1;
-      transform:translateY(0px)
-    }
+.animation.first.slideup{
+  animation: slideup 0.6s forwards;
+}
+
+@keyframes slideup {
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
   }
 }
 
 
-.animation.on.delay-1{
+
+.animation.on.delay-1 {
   animation-delay: 0.2s;
 }
-.animation.on.delay-2{
+.animation.on.delay-2 {
   animation-delay: 0.4s;
 }
-.animation.on.delay-3{
+.animation.on.delay-3 {
   animation-delay: 0.6s;
 }
-.animation.on.delay-4{
+.animation.on.delay-4 {
   animation-delay: 0.8s;
 }
-.animation.on.delay-5{
+.animation.on.delay-5 {
   animation-delay: 1s;
 }
-.animation.on.delay-6{
+.animation.on.delay-6 {
   animation-delay: 1.2s;
 }
-
 
